--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-bootstrap": "^0.32.29",
     "bootstrap": "^5.2.0-beta1",
+    "firebase": "^9.8.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
