--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.20",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
